<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_movilidad"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/movilidad" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dato"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/datos_movilidad" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/movilidad"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_movilidad2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/movilidad2" />



    </LinearLayout>
</ScrollView>