<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_lesiones_musculares2"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/lesiones_musculares2" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/lesiones3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_lesiones_musculares"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/lesiones_musculares" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dato"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/datos_lesiones" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_lesiones2"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/lesiones4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/lesiones2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/datos_lesiones3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/lesiones"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/lesiones1"/>


    </LinearLayout>
</ScrollView>