<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_manual"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/text_manual" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <ImageView
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/manual3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/text_manual2" />

        <ImageView
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/manual2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/text_manual3" />

    </LinearLayout>
</ScrollView>